# CSC466-Project

./: .gitignore  CMakeLists.txt  README.md  results.out
src/: CMakeLists.txt  analytical_placement.cpp  chip.cpp  chip.h  draw_netlist.py  iterative_placement.cpp  netlist.h  placement.h  plan.cpp  plan.h  plot_iterations.py  plot_snapshots.py  random_netlist.cpp  run_placer.cpp  test_placer.cpp
